--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
-<h1>
-    Under Construction
-</h1>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>smalik12.github.io</title>
+    </head>
+
+    <body>
+        <h1>Under Construction...</h1>
+    </body>
+</html>
